<resources>
    <string name="app_name">Dot Painter</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name ="action_setwidth">Set Width</string>
    <string name="title_activity_set_width_dialog">SetWidthDialogActivity</string>
    <string name="cancel_label">Cancel</string>
    <string name="ok_label">OK</string>
    <string name="clear">Clear Screen</string>
    <string name="action_set_color">Set Color</string>
    <string name="choose_color">Choose a Color</string>
    <string name="alpha">Alpha</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="title_activity_set_color">SetColorActivity</string>
</resources>
